2007-07-22 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure: re-introduced .version
	* sdcc.spec, doc/INSTALL.txt: they are used only for releases;
	  the version reverted to 2.7.0

2007-07-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* configure.in,
	* doc/sdccman.lyx: bumped version to 2.7.3
	* device/include/mcs51/compiler.h: fixed elif->else
	* src/mcs51/gen.c (genAnd, genOr): handle accuse for pure bit operands
	* src/mcs51/ralloc.c (createStackSpil): fixed SCLS bug with sloc for sbit,
	  (operandUsesAcc, packRegsForAccUse): added parameter allowBitspace to
	   enable accuse for bit operands
	* src/SDCCmain.c (printVersionInfo),
	* src/SDCCutil.c (getBuildEnvironment): factored out creation of build
	  environment descriptor
	* src/SDCCutil.h: added getBuildEnvironment
	* src/SDCCglue.c (initialComments): use getBuildEnvironment
	* support/regression/tests/bug1464657.c: enabled test test_Peephole251
	* support/regression/tests/bug-408972.c: enabled test leftShiftLong
	* support/regression/tests/bug1348008.c,
	* support/regression/tests/bug1496419.c,
	* support/regression/tests/bug1503067.c,
	* support/regression/tests/preproc.c: added empty tests

2007-07-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug1678803.c: new, added

2007-07-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/aslink.h,
	* as/link/hc08/lkihx.c,
	* as/link/hc08/lkrloc.c,
	* as/link/mcs51/lkihx.c,
	* as/link/mcs51/lkrloc.c: renamed ihxEntendedLinearAddress to
	  ihxExtendedLinearAddress
	* as/link/mcs51/lkrloc.c (relr),
	* as/mcs51/asout.c (outr11, outr19): handle absolute destination for
	  acall/ajmp, see bug 830513

2007-07-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCcse.c (replaceAllSymBySym): renamed siaddr to isaddr,
	  (cseBBlock): remember aggr2ptr has been used
	* src/SDCCicode.c (operandSize): added function to handle aggr2ptr,
	  (geniCodeAssign): fixed bug 868103